@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-02T16:20:27Z",
-  "count_outdated" : 426,
-  "uniques_outdated" : 245,
-  "count" : 460,
+  "timestamp" : "2022-08-03T01:38:41Z",
+  "count_outdated" : 427,
+  "uniques_outdated" : 246,
+  "count" : 462,
   "uniques" : 263,
   "clones" : [
-    {
-      "timestamp": "2022-07-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-20T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-08-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 4,
+      "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
