@@ -1,12 +1,7 @@
 {
-  "count": 34,
+  "count": 35,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-07-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-20T00:00:00Z",
       "count": 3,
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-08-02T00:00:00Z",
-      "count": 2,
+      "count": 4,
       "uniques": 1
     }
   ]
